<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="sumary_subtitle">See bellow the summary of your bill</string>
    <string name="total_table">total table:</string>
    <string name="num_of_people">num of people</string>
    <string name="percentage">percentage:</string>
    <string name="refresh">refresh</string>
    <string name="main_subtitle">Fullfil the bellow fields</string>
    <string name="table_amount_label">Type the table amount</string>
    <string name="table_amount_hint">$ 100,00</string>
    <string name="num_people_label">Num of People:</string>
    <string name="num_of_people_hint">Ex:4</string>
    <string name="porcentagem_label">Percentage of tip:</string>
    <string name="percentage_tip_hint">10%</string>
    <string name="clean">clean</string>
    <string name="calculate">calculate</string>

</resources>