<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <TextView
        android:id="@+id/tv_titlle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hint_total_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/table_amount_label"
        app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/main_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titlle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_total"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        android:paddingStart="0dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle"
        app:layout_constraintStart_toStartOf="@+id/tv_hint_total_table"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_total_table">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/table_amount_hint"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_hint_numero_pessoas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/num_people_label"
        app:layout_constraintStart_toStartOf="@+id/til_total"
        app:layout_constraintTop_toBottomOf="@+id/til_total" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_num_people"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle"
        app:layout_constraintStart_toStartOf="@+id/tv_hint_numero_pessoas"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_numero_pessoas">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_num_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="2"
            android:hint="@string/num_of_people_hint"
            android:paddingStart="0dp"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_hint_porcentagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/porcentagem_label"
        app:layout_constraintStart_toStartOf="@+id/til_num_people"
        app:layout_constraintTop_toBottomOf="@+id/til_num_people" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_porcentagem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/tv_subtitle"
        app:layout_constraintStart_toStartOf="@+id/tv_hint_porcentagem"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint_porcentagem">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_porcentagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingStart="0dp"
            android:maxLength="3"
            android:hint="@string/percentage_tip_hint"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/btn_clean"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        app:layout_goneMarginStart="16dp"
        android:text="@string/clean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vertical_guideline" />



</androidx.constraintlayout.widget.ConstraintLayout>